--- a/sito-web-laboratorio/html_pages/areacommerciale.html
+++ b/sito-web-laboratorio/html_pages/areacommerciale.html
@@ -1,122 +1,137 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Area Commerciale - Torino GamesCon</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/areacommerciale_styles.css">
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles/areacommerciale_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
-
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/theme_style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-          <ul>
-            <li class="dropdown">
-              <a href="#info">Info</a>
-              <div class="dropdown-content">
-                <a href="comeArrivare.html">Come arrivare</a>
-                <a href="#accessibilita">Accessibilità</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a href="#aree">Aree</a>
-              <div class="dropdown-content">
-                <a href="#games">Games</a>
-                <a href="cosplay.html">Cosplay</a>
-                <a href="#conference">Conference</a>
-                <a href="#area-commerciale">Area Commerciale</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a href="#attivita">Attività</a>
-              <div class="dropdown-content">
-                <a href="./formazione_dev.html">Formazione Developers</a>
-                <a href="videogames.html">Videogames & Tabletop</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <div>
-                <a href="#facebook"
-                  ><img class="social" src="../assets/icon_facebook.svg"
-                /></a>
-                <a href="#instagram"
-                  ><img class="social" src="../assets/icon_instagram.svg"
-                /></a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a href="#social">Contatti</a>
-              <div class="dropdown-content">
-                <a href="#contatti">Contatti</a>
-              </div>
-            </li>
-          </ul>
-        </nav>
-      </header>
+      <nav>
+        <ul>
+          <li class="dropdown">
+            <a href="#info">Info</a>
+            <div class="dropdown-content">
+              <a href="comeArrivare.html">Come arrivare</a>
+              <a href="#accessibilita">Accessibilità</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#aree">Aree</a>
+            <div class="dropdown-content">
+              <a href="#games">Games</a>
+              <a href="cosplay.html">Cosplay</a>
+              <a href="#conference">Conference</a>
+              <a href="#area-commerciale">Area Commerciale</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#attivita">Attività</a>
+            <div class="dropdown-content">
+              <a href="./formazione_dev.html">Formazione Developers</a>
+              <a href="videogames.html">Videogames & Tabletop</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <div>
+              <a href="#facebook"
+                ><img class="social" src="../assets/icon_facebook.svg"
+              /></a>
+              <a href="#instagram"
+                ><img class="social" src="../assets/icon_instagram.svg"
+              /></a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#social">Contatti</a>
+            <div class="dropdown-content">
+              <a href="#contatti">Contatti</a>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <div class="container">
-        <h1>Area Commerciale Torino GamesCon</h1>
+      <h1>Area Commerciale Torino GamesCon</h1>
 
-        <div class="bottoni-principali">
-            <a href="#espositori" class="btn btn-scopri">Scopri gli Espositori</a>
-            <a href="#prenota" class="btn btn-prenota">Prenota il tuo Stand</a>
-        </div>
+      <div class="bottoni-principali">
+        <a href="#espositori" class="btn btn-scopri">Scopri gli Espositori</a>
+        <a href="#prenota" class="btn btn-prenota">Prenota il tuo Stand</a>
+      </div>
 
-        <div class="descrizione-area">
-            <p>L'Area Commerciale del Torino GamesCon è un universo dove creatività, passione e commercio si incontrano per portare il terrore tra voi! Un luogo dove gli appassionati di gaming, cosplay e cultura pop possono immergersi in un'esperienza unica, scoprendo prodotti esclusivi e incontrando i principali espositori del settore.</p>
-        </div>
+      <div class="descrizione-area">
+        <p>
+          L'Area Commerciale del Torino GamesCon è un universo dove creatività,
+          passione e commercio si incontrano per portare il terrore tra voi! Un
+          luogo dove gli appassionati di gaming, cosplay e cultura pop possono
+          immergersi in un'esperienza unica, scoprendo prodotti esclusivi e
+          incontrando i principali espositori del settore.
+        </p>
+      </div>
 
-        <div class="temi-grid">
-            <div class="temi-item">
-                <img src="../assets/commerciale-one.jpg" alt="Merchandising">
-            </div>
-            <div class="temi-item">
-                <img src="../assets/commerciale-two.png" alt="Cibo e Bevande">
-            </div>
-            <div class="temi-item">
-                <img src="../assets/commerciale-three.jpg" alt="Arte e Illustrazioni">
-            </div>
-            <div class="temi-item">
-                <img src="../assets/commerciale-four.jpeg" alt="Tecnologia">
-            </div>
+      <div class="temi-grid">
+        <div class="temi-item">
+          <img src="../assets/commerciale-one.jpg" alt="Merchandising" />
         </div>
+        <div class="temi-item">
+          <img src="../assets/commerciale-two.png" alt="Cibo e Bevande" />
+        </div>
+        <div class="temi-item">
+          <img
+            src="../assets/commerciale-three.jpg"
+            alt="Arte e Illustrazioni"
+          />
+        </div>
+        <div class="temi-item">
+          <img src="../assets/commerciale-four.jpeg" alt="Tecnologia" />
+        </div>
+      </div>
 
-        <div id="espositori" class="espositori-grid">
-            <div class="espositore">
-                <img src="../assets/its-logo.png" alt="logo_espositore_1">
-            </div>
-            <div class="espositore">
-                <img src="../assets/hp-logo.png" alt="logo_espositore_2">
-            </div>
-            <div class="espositore">                
-                <img src="../assets/visa-logo.png" alt="logo_espositore_3">
-            </div>
-            <div class="espositore">                
-                <img src="../assets/Pepsi-Logo.png" alt="logo_espositore_4">
-            </div>
-            <div class="espositore">               
-                <img src="../assets/amazon-logo.png" alt="logo_espositore_5">
-            </div>
-            <div class="espositore">               
-                <img src="../assets/unieuro-logo.png" alt="logo_espositore_6">
-            </div>
-            <div class="espositore">               
-                <img src="../assets/Unity-Logo.png" alt="logo_espositore_7">
-            </div>
-            <div class="espositore">               
-                <img src="../assets/de-logo.png" alt="logo_espositore_8">
-            </div>
+      <div id="espositori" class="espositori-grid">
+        <div class="espositore">
+          <img src="../assets/its-logo.png" alt="logo_espositore_1" />
         </div>
+        <div class="espositore">
+          <img src="../assets/hp-logo.png" alt="logo_espositore_2" />
+        </div>
+        <div class="espositore">
+          <img src="../assets/visa-logo.png" alt="logo_espositore_3" />
+        </div>
+        <div class="espositore">
+          <img src="../assets/Pepsi-Logo.png" alt="logo_espositore_4" />
+        </div>
+        <div class="espositore">
+          <img src="../assets/amazon-logo.png" alt="logo_espositore_5" />
+        </div>
+        <div class="espositore">
+          <img src="../assets/unieuro-logo.png" alt="logo_espositore_6" />
+        </div>
+        <div class="espositore">
+          <img src="../assets/Unity-Logo.png" alt="logo_espositore_7" />
+        </div>
+        <div class="espositore">
+          <img src="../assets/de-logo.png" alt="logo_espositore_8" />
+        </div>
+      </div>
 
-        <div class="contatta-box">
-            <h2>Vuoi Esporre?</h2>
-            <p>Sei un'azienda o un creatore interessato a far parte del nostro universo?</p>
-            <a href="#" class="btn-contatta">Contattaci QUI</a>
-        </div>
+      <div class="contatta-box">
+        <h2>Vuoi Esporre?</h2>
+        <p>
+          Sei un'azienda o un creatore interessato a far parte del nostro
+          universo?
+        </p>
+        <a href="#" class="btn-contatta">Contattaci QUI</a>
+      </div>
     </div>
 
     <script src="../scripts/areacommerciale_script.js"></script>
     <script src="../scripts/navbar_scripts.js"></script>
-</body>
+  </body>
 </html>
