--- a/sito-web-laboratorio/html_pages/comeArrivare.html
+++ b/sito-web-laboratorio/html_pages/comeArrivare.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/comeArrivare_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="stylesheet" href="../styles/bottombar_styles.css" />
+    <link rel="stylesheet" href="../styles/theme_style.css" />
     <link rel="icon" href="../assets/icon_gamescon.png" />
   </head>
   <body>
