--- a/sito-web-laboratorio/html_pages/cosplay.html
+++ b/sito-web-laboratorio/html_pages/cosplay.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/cosplay_styles.css">
     <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="stylesheet" href="../styles/bottombar_styles.css" />
+    <link rel="stylesheet" href="../styles/theme_style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" 
     rel="stylesheet">
     <link rel="icon" href="../assets/icon_gamescon.png" />
