--- a/sito-web-laboratorio/html_pages/formazione_dev.html
+++ b/sito-web-laboratorio/html_pages/formazione_dev.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/formazione_styles.css" />
     <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
+    <link rel="stylesheet" href="../styles/theme_style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
