--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/home_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="stylesheet" href="../styles/bottombar_styles.css" />
+    <link rel="stylesheet" href="../styles/theme_style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
@@ -104,7 +105,7 @@
       <section class="registration-container">
         <div id="registration-form">
           <h2>Prenota ora il biglietto... per il tuo fato!</h2>
-          <hr>
+          <hr />
           <form>
             <div class="form-group">
               <input type="text" placeholder="Nome" name="nome" required />
