--- a/sito-web-laboratorio/html_pages/areacommerciale.html
+++ b/sito-web-laboratorio/html_pages/areacommerciale.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/areacommerciale_styles.css" />
+    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="stylesheet" href="../styles/theme_style.css" />
   </head>
@@ -36,16 +37,6 @@
             <div class="dropdown-content">
               <a href="./formazione_dev.html">Formazione Developers</a>
               <a href="videogames.html">Videogames & Tabletop</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <div>
-              <a href="#facebook"
-                ><img class="social" src="../assets/icon_facebook.svg"
-              /></a>
-              <a href="#instagram"
-                ><img class="social" src="../assets/icon_instagram.svg"
-              /></a>
             </div>
           </li>
           <li class="dropdown">
@@ -130,6 +121,25 @@
         <a href="#" class="btn-contatta">Contattaci QUI</a>
       </div>
     </div>
+    <footer>
+      <li class="dropdown">
+        <div>
+          <a href="#facebook" target="_blank"
+            ><img class="social" src="../assets/icon_facebook.svg"
+          /></a>
+          <a
+            href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
+            target="_blank"
+            ><img class="social" src="../assets/icon_instagram.svg"
+          /></a>
+          <a
+            href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
+            target="_blank"
+            ><img class="social" src="../assets/icon_tiktok.svg" />
+          </a>
+        </div>
+      </li>
+    </footer>
 
     <script src="../scripts/areacommerciale_script.js"></script>
     <script src="../scripts/navbar_scripts.js"></script>
