--- a/sito-web-laboratorio/html_pages/comeArrivare.html
+++ b/sito-web-laboratorio/html_pages/comeArrivare.html
@@ -53,7 +53,7 @@
     </header>
     <main>
       <div >
-        <img id="mappaEvento" src="../assets/cartina_gamescon.png" alt="cartina_gamescon">
+        <img id="mappaEvento" src="../assets/cartina_stupinigi.jpg" alt="cartina_gamescon">
       </div>
       
     </main>
