--- a/sito-web-laboratorio/html_pages/contatti.html
+++ b/sito-web-laboratorio/html_pages/contatti.html
@@ -76,7 +76,7 @@
               <div class="image-container">
                 <img
                   id="event_map"
-                  src="../assets/cartina_gamescon.png"
+                  src="../assets/cartina_stupinigi.jpg"
                   alt="Mappa evento"
                 />
               </div>
@@ -110,9 +110,26 @@
                 name="telefono"
                 required
               />
+              <p> Un evento unico, per la prima volta alla Palazzina Di Caccia Di Stupinigi la grande festa dedicata al mondo halloween ed  ai fumetti, al mondo cosplay,
+                ai videogames, ai giochi da tavolo.</p>
   </body>
   <footer>
-    <p> Un evento unico, per la prima volta alla Palazzina Di Caccia Di Stupinigi la grande festa dedicata al mondo halloween ed  ai fumetti, al mondo cosplay,
-      ai videogames, ai giochi da tavolo.</p>
+    <li class="dropdown">
+      <div>
+        <a href="#facebook" target="_blank"
+          ><img class="social" src="../assets/icon_facebook.svg"
+        /></a>
+        <a
+          href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
+          target="_blank"
+          ><img class="social" src="../assets/icon_instagram.svg"
+        /></a>
+        <a
+          href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
+          target="_blank"
+          ><img class="social" src="../assets/icon_tiktok.svg" />
+        </a>
+      </div>
+    </li>
   </footer>
 </html>
