--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -94,7 +94,7 @@
         <div class="image-container">
           <img
             id="event_map"
-            src="../assets/cartina_gamescon.png"
+            src="../assets/cartina_stupinigi.jpg"
             alt="Mappa evento"
           />
         </div>
