--- a/sito-web-laboratorio/html_pages/areacommerciale.html
+++ b/sito-web-laboratorio/html_pages/areacommerciale.html
@@ -17,6 +17,12 @@
       <nav>
         <ul>
           <li class="dropdown">
+            <a href="#">Home</a>
+            <div class="dropdown-content">
+              <a href="home.html">Home</a>
+            </div>
+          </li>
+          <li class="dropdown">
             <a href="#info">Info</a>
             <div class="dropdown-content">
               <a href="comeArrivare.html">Come arrivare</a>
@@ -29,7 +35,7 @@
               <a href="#games">Games</a>
               <a href="cosplay.html">Cosplay</a>
               <a href="#conference">Conference</a>
-              <a href="#area-commerciale">Area Commerciale</a>
+              <a href="areacommerciale.html">Area Commerciale</a>
             </div>
           </li>
           <li class="dropdown">
@@ -42,7 +48,7 @@
           <li class="dropdown">
             <a href="#social">Contatti</a>
             <div class="dropdown-content">
-              <a href="#contatti">Contatti</a>
+              <a href="contatti.html">Contatti</a>
             </div>
           </li>
         </ul>
