--- a/sito-web-laboratorio/html_pages/contatti.html
+++ b/sito-web-laboratorio/html_pages/contatti.html
@@ -29,7 +29,7 @@
           <li class="dropdown">
             <a href="#info">Info</a>
             <div class="dropdown-content">
-              <a href="./comeArrivare.html">Come arrivare</a>
+              <a href="comeArrivare.html">Come arrivare</a>
               <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
@@ -39,7 +39,7 @@
               <a href="#games">Games</a>
               <a href="cosplay.html">Cosplay</a>
               <a href="#conference">Conference</a>
-              <a href="#area-commerciale">Area Commerciale</a>
+              <a href="areacommerciale.html">Area Commerciale</a>
             </div>
           </li>
           <li class="dropdown">
@@ -52,7 +52,7 @@
           <li class="dropdown">
             <a href="#social">Contatti</a>
             <div class="dropdown-content">
-              <a href="#contatti">Contatti</a>
+              <a href="contatti.html">Contatti</a>
             </div>
           </li>
         </ul>
