--- a/sito-web-laboratorio/html_pages/cosplay.html
+++ b/sito-web-laboratorio/html_pages/cosplay.html
@@ -13,47 +13,47 @@
     <link rel="icon" href="../assets/icon_gamescon.png" />
 </head>
 <body>
-    <header>
-        <nav>
-          <ul>
-            <li class="dropdown">
-                <a href="#">Home</a>
-                <div class="dropdown-content">
-                    <a href="home.html">Home</a>
-                </div>
-            </li>
-            <li class="dropdown">
-              <a href="#info">Info</a>
-              <div class="dropdown-content">
-                <a href="./comeArrivare.html">Come arrivare</a>
-                <a href="#accessibilita">Accessibilità</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a href="#aree">Aree</a>
-              <div class="dropdown-content">
-                <a href="#games">Games</a>
-                <a href="cosplay.html">Cosplay</a>
-                <a href="#conference">Conference</a>
-                <a href="#area-commerciale">Area Commerciale</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a href="#attivita">Attività</a>
-              <div class="dropdown-content">
-                <a href="./formazione_dev.html">Formazione Developers</a>
-                <a href="videogames.html">Videogames & Tabletop</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a href="#social">Contatti</a>
-              <div class="dropdown-content">
-                <a href="#contatti">Contatti</a>
-              </div>
-            </li>
-          </ul>
-        </nav>
-      </header>
+  <header>
+    <nav>
+      <ul>
+        <li class="dropdown">
+          <a href="#">Home</a>
+          <div class="dropdown-content">
+            <a href="home.html">Home</a>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#info">Info</a>
+          <div class="dropdown-content">
+            <a href="comeArrivare.html">Come arrivare</a>
+            <a href="#accessibilita">Accessibilità</a>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#aree">Aree</a>
+          <div class="dropdown-content">
+            <a href="#games">Games</a>
+            <a href="cosplay.html">Cosplay</a>
+            <a href="#conference">Conference</a>
+            <a href="areacommerciale.html">Area Commerciale</a>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#attivita">Attività</a>
+          <div class="dropdown-content">
+            <a href="./formazione_dev.html">Formazione Developers</a>
+            <a href="videogames.html">Videogames & Tabletop</a>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#social">Contatti</a>
+          <div class="dropdown-content">
+            <a href="contatti.html">Contatti</a>
+          </div>
+        </li>
+      </ul>
+    </nav>
+  </header>
     <main>
 
         <section id="programma">
