--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -34,7 +34,7 @@
               <a href="#games">Games</a>
               <a href="cosplay.html">Cosplay</a>
               <a href="#conference">Conference</a>
-              <a href="#area-commerciale">Area Commerciale</a>
+              <a href="areacommerciale.html">Area Commerciale</a>
             </div>
           </li>
           <li class="dropdown">
@@ -44,11 +44,10 @@
               <a href="videogames.html">Videogames & Tabletop</a>
             </div>
           </li>
-
           <li class="dropdown">
             <a href="#social">Contatti</a>
             <div class="dropdown-content">
-              <a href="#contatti">Contatti</a>
+              <a href="contatti.html">Contatti</a>
             </div>
           </li>
         </ul>
