--- a/sito-web-laboratorio/html_pages/videogames.html
+++ b/sito-web-laboratorio/html_pages/videogames.html
@@ -20,18 +20,18 @@
   </head>
   <body>
     <header>
-        <nav>
-          <ul>
-            <li class="dropdown">
-              <a href="#">Home</a>
-              <div class="dropdown-content">
-                  <a href="home.html">Home</a>
-              </div>
+      <nav>
+        <ul>
+          <li class="dropdown">
+            <a href="#">Home</a>
+            <div class="dropdown-content">
+              <a href="home.html">Home</a>
+            </div>
           </li>
           <li class="dropdown">
             <a href="#info">Info</a>
             <div class="dropdown-content">
-              <a href="./comeArrivare.html">Come arrivare</a>
+              <a href="comeArrivare.html">Come arrivare</a>
               <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
@@ -41,7 +41,7 @@
               <a href="#games">Games</a>
               <a href="cosplay.html">Cosplay</a>
               <a href="#conference">Conference</a>
-              <a href="#area-commerciale">Area Commerciale</a>
+              <a href="areacommerciale.html">Area Commerciale</a>
             </div>
           </li>
           <li class="dropdown">
@@ -54,7 +54,7 @@
           <li class="dropdown">
             <a href="#social">Contatti</a>
             <div class="dropdown-content">
-              <a href="#contatti">Contatti</a>
+              <a href="contatti.html">Contatti</a>
             </div>
           </li>
         </ul>
