--- a/sito-web-laboratorio/html_pages/contatti.html
+++ b/sito-web-laboratorio/html_pages/contatti.html
@@ -59,9 +59,17 @@
       </nav>
     </header>
     <link rel="icon" href="../assets/icon_gamescon.png" />
+    <section>
+      <p>
+        GamesCon Torino vi aspetta dal 30 al 1 ottobre 2025 alla Palazzina di Caccia Di Stupinigi!
+    </p>
+    <p>
+        Mail: gamescontorino@gmail.com
+    </p>
+
+    </section>
      <main>
-      
-        <section id="contatti">
+       <section id="contatti">
             <h1>Vieni a trovarci alla splendida Palazzina di Caccia di Stupinigi per tre giorni di puro divertimento e innovazione.</h1>
 
             <p>
@@ -82,36 +90,6 @@
               </div>
             </section>
     </main>
-
-
- 
-    <section class="registration-container"></section>
-        <div id="registration-form">
-          <h2>Contattaci</h2>
-          <form>
-            <div class="form-group">
-              <input type="text" placeholder="Nome" name="nome" required />
-            </div>
-            <div class="form-group">
-              <input
-                type="text"
-                placeholder="Cognome"
-                name="cognome"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <input type="email" placeholder="Email" name="email" required />
-            </div>
-            <div class="form-group">
-              <input
-                type="tel"
-                placeholder="Telefono"
-                name="telefono"
-                required
-              />
-              <p> Un evento unico, per la prima volta alla Palazzina Di Caccia Di Stupinigi la grande festa dedicata al mondo halloween ed  ai fumetti, al mondo cosplay,
-                ai videogames, ai giochi da tavolo.</p>
   </body>
   <footer>
     <li class="dropdown">
