--- a/sito-web-laboratorio/html_pages/videogames.html
+++ b/sito-web-laboratorio/html_pages/videogames.html
@@ -20,18 +20,18 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li class="dropdown">
-            <a href="#">Home</a>
-            <div class="dropdown-content">
-              <a href="home.html">Home</a>
-            </div>
+        <nav>
+          <ul>
+            <li class="dropdown">
+              <a href="#">Home</a>
+              <div class="dropdown-content">
+                  <a href="home.html">Home</a>
+              </div>
           </li>
           <li class="dropdown">
             <a href="#info">Info</a>
             <div class="dropdown-content">
-              <a href="comeArrivare.html">Come arrivare</a>
+              <a href="./comeArrivare.html">Come arrivare</a>
               <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
@@ -41,7 +41,7 @@
               <a href="#games">Games</a>
               <a href="cosplay.html">Cosplay</a>
               <a href="#conference">Conference</a>
-              <a href="areacommerciale.html">Area Commerciale</a>
+              <a href="#area-commerciale">Area Commerciale</a>
             </div>
           </li>
           <li class="dropdown">
@@ -54,7 +54,7 @@
           <li class="dropdown">
             <a href="#social">Contatti</a>
             <div class="dropdown-content">
-              <a href="contatti.html">Contatti</a>
+              <a href="#contatti">Contatti</a>
             </div>
           </li>
         </ul>
@@ -74,20 +74,25 @@
         <h2>Sparatutto 1V1</h2>
         <p>Metti alla prova i tuoi riflessi con emozionanti sfide uno contro uno.</p>
       </div>
-      <div class="activity-card">
-        <h2>Beat Saber</h2>
-        <p>Un gioco ritmico frenetico: taglia i blocchi al ritmo della musica!</p>
+        <p></p>
       </div>
     </div>
   </section>
+  <section id="vr-section" class="activity-section">
+    <div class="activity-container">
+  <div class="activity-card">
+    <h2>Beat Saber</h2>
+    <p>Un gioco ritmico frenetico: taglia i blocchi al ritmo della musica!</p>
+  </div>
+  <div class="activity-card">
+    <h2>Escape Room</h2>
+  </div>
+</section>
+  
 
-  <h1>VIDEOGIOCHI</h1>
+  <h1>VIDEOGIOCHI PC</h1>
 <section id="videogames-section" class="activity-section">
   <div class="activity-container">
-    <div class="activity-card">
-      <h2>Just Dance</h2>
-      <p>Scatenati con i tuoi passi di danza in un'esperienza interattiva a tema horror!</p>
-    </div>
     <div class="activity-card">
       <h2>Dead by Daylight</h2>
       <p>Diventa un sopravvissuto o l'assassino e scappa o cattura i tuoi avversari in questo gioco horror multiplayer.</p>
@@ -114,6 +119,36 @@
         <h2>Deadlands</h2>
         <p>Un gioco di ruolo che mescola western e horror soprannaturale. Esplora il selvaggio West infestato da mostri e spiriti malvagi.</p>
       </div>
+  </div>
+</section>
+
+<section id="videogames-section" class="activity-section">
+<div class="activity-container">
+  <div class="activity-card">
+      <h2>Fury  Of Dracula</h2>
+      <p>Un gioco di deduzione e strategia in cui i cacciatori inseguono Dracula attraverso l'Europa, cercando di fermare i suoi oscuri piani in un'avventura carica di tensione.</p>
+    </div>
+    <div class="activity-card">
+      <h2>Arkham Horror</h2>
+      <p>Un gioco cooperativo ambientato in un mondo sovrannaturale, dove i giocatori affrontano orrori indicibili e cercano di fermare antichi portali che minacciano di distruggere la realtà.</p>
+    </div>
+    </div>
+</section>
+ 
+<section id="videogames-section" class="activity-section">
+  <div class="activity-container">
+    <div class="activity-card">
+      <h2>Apocalisse</h2>
+      <p>Un gioco cooperativo dove i giocatori affrontano eventi catastrofici globali, cercando di sopravvivere e salvare ciò che resta dell'umanità in un mondo devastato.</p>
+      </div>
+      <div class="activity-card">
+        <h2>Nemesis</h2>
+        <p>Un gioco di sopravvivenza e tensione, in cui i giocatori devono sfuggire a letali alieni e risolvere i misteri di una nave spaziale infestata.</p>      </div>
+      <div class="activity-card">
+        <h2>Fiabe Di Stoffa</h2>
+        <p>Un gioco cooperativo in cui i giocatori interpretano eroi di stoffa che affrontano pericoli e risolvono misteri per proteggere i sogni di una bambina. </p>
+      </div>
+  </div>
 </section>
 </main>
 <footer>
