--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -93,7 +93,7 @@
         <div class="image-container">
           <img
             id="event_map"
-            src="../assets/cartina_stupinigi.jpg"
+            src="../assets/cartina_stupinigi_completa.png"
             alt="Mappa evento"
           />
         </div>
