feat: added text & CSS & JS ComeArrivare

--- a/sito-web-laboratorio/html_pages/comeArrivare.html
+++ b/sito-web-laboratorio/html_pages/comeArrivare.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <head>
+<head>
     <meta charset="utf-8" />
     <title>Come Arrivare</title>
     <meta name="description" content="Come Arrivare" />
@@ -8,75 +8,75 @@
     <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link rel="stylesheet" href="../styles/theme_style.css" />
     <link rel="icon" href="../assets/icon_gamescon.png" />
-  </head>
-  <body>
+</head>
+<body>
     <header>
-      <nav>
-        <ul>
-          <li class="dropdown">
-            <a href="#">Home</a>
-            <div class="dropdown-content">
-              <a href="home.html">Home</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <a href="#info">Info</a>
-            <div class="dropdown-content">
-              <a href="comeArrivare.html">Come arrivare</a>
-              <a href="#accessibilita">Accessibilità</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <a href="#aree">Aree</a>
-            <div class="dropdown-content">
-              <a href="#games">Games</a>
-              <a href="cosplay.html">Cosplay</a>
-              <a href="#conference">Conference</a>
-              <a href="areacommerciale.html">Area Commerciale</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <a href="#attivita">Attività</a>
-            <div class="dropdown-content">
-              <a href="./formazione_dev.html">Formazione Developers</a>
-              <a href="videogames.html">Videogames & Tabletop</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <a href="#social">Contatti</a>
-            <div class="dropdown-content">
-              <a href="contatti.html">Contatti</a>
-            </div>
-          </li>
-        </ul>
-      </nav>
+        <nav>
+            <ul>
+                <li class="dropdown">
+                    <a href="#">Home</a>
+                    <div class="dropdown-content">
+                        <a href="home.html">Home</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="#info">Info</a>
+                    <div class="dropdown-content">
+                        <a href="comeArrivare.html">Come arrivare</a>
+                        <a href="#accessibilita">Accessibilità</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="#aree">Aree</a>
+                    <div class="dropdown-content">
+                        <a href="#games">Games</a>
+                        <a href="cosplay.html">Cosplay</a>
+                        <a href="#conference">Conference</a>
+                        <a href="#area-commerciale">Area Commerciale</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="#attivita">Attività</a>
+                    <div class="dropdown-content">
+                        <a href="./formazione_dev.html">Formazione Developers</a>
+                        <a href="videogames.html">Videogames & Tabletop</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="#social">Contatti</a>
+                    <div class="dropdown-content">
+                        <a href="#contatti">Contatti</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <div >
-        <img id="mappaEvento" src="../assets/cartina_stupinigi.jpg" alt="cartina_gamescon">
-      </div>
-      
+        <div class="transport-container">
+            <div class="transport-options">
+                <img id="busIcon" src="../assets/icon_bus.png" alt="Trasporto con autobus" class="transport-icon">
+                <img id="carIcon" src="../assets/icon_car.png" alt="Trasporto con auto" class="transport-icon">
+            </div>
+            <div id="transportInfo" class="transport-info"></div>
+            <div class="map-container">
+                <img id="mappaEvento" src="../assets/cartina_stupinigi_completa.png" alt="cartina_gamescon">
+            </div>
+        </div>
     </main>
     <footer>
-      <li class="dropdown">
-        <div>
-          <a href="#facebook" target="_blank"
-            ><img class="social" src="../assets/icon_facebook.svg"
-          /></a>
-          <a
-            href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
-            target="_blank"
-            ><img class="social" src="../assets/icon_instagram.svg"
-          /></a>
-          <a
-            href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
-            target="_blank"
-            ><img class="social" src="../assets/icon_tiktok.svg" />
-          </a>
-        </div>
-      </li>
+        <li class="dropdown">
+            <div>
+                <a href="#facebook" target="_blank"><img class="social" src="../assets/icon_facebook.svg"/></a>
+                <a href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr" target="_blank">
+                    <img class="social" src="../assets/icon_instagram.svg"/>
+                </a>
+                <a href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1" target="_blank">
+                    <img class="social" src="../assets/icon_tiktok.svg"/>
+                </a>
+            </div>
+        </li>
     </footer>
     <script src="../scripts/comeArrivare_script.js"></script>
     <script src="../scripts/navbar_scripts.js"></script>
-  </body>
+</body>
 </html>
