--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -8,8 +8,8 @@
     />
     <title>GamesCon Event</title>
     <link rel="stylesheet" href="../styles/home_styles.css" />
-    <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="stylesheet" href="../styles/bottombar_styles.css" />
+    <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="stylesheet" href="../styles/theme_style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
@@ -57,7 +57,11 @@
     <main>
       <section id="header-image">
         <div class="header-image-container">
-          <img src="../assets/title_gamescon.png" alt="Event Header Image" />
+          <img
+            id="titleImage"
+            src="../assets/gamesConTitle.png"
+            alt="Event Header Image"
+          />
         </div>
       </section>
 
