--- a/sito-web-laboratorio/html_pages/contatti.html
+++ b/sito-web-laboratorio/html_pages/contatti.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>Contatti</title>
-    <link rel="stylesheet" href="../styles/formazione_styles.css" />
+    <link rel="stylesheet" href="../styles/contatti_styles.css" />
     <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="stylesheet" href="../styles/theme_style.css" />
@@ -89,9 +89,9 @@
                 />
               </div>
             </section>
-    </main>
-  </body>
-  <footer>
+          </div>
+    </main> 
+    <footer>
     <li class="dropdown">
       <div>
         <a href="#facebook" target="_blank"
@@ -110,4 +110,6 @@
       </div>
     </li>
   </footer>
+  </body>
+ 
 </html>
