--- a/sito-web-laboratorio/html_pages/contatti.html
+++ b/sito-web-laboratorio/html_pages/contatti.html
@@ -59,57 +59,54 @@
       </nav>
     </header>
     <link rel="icon" href="../assets/icon_gamescon.png" />
-    <section>
-      <p>
-        GamesCon Torino vi aspetta dal 30 al 1 ottobre 2025 alla Palazzina di Caccia Di Stupinigi!
-    </p>
-    <p>
-        Mail: gamescontorino@gmail.com
-    </p>
 
-    </section>
-     <main>
-       <section id="contatti">
-            <h1>Vieni a trovarci alla splendida Palazzina di Caccia di Stupinigi per tre giorni di puro divertimento e innovazione.</h1>
-
-            <p>
-                GamesCon Torino vi aspetta dal 30 al 1 ottobre 2025 alla Palazzina di Caccia Di Stupinigi!
-            </p>
-            <p>
-                Mail: gamescontorino@gmail.com
-            </p>
- 
-            <h1>DOVE SIAMO</h1>
-            <section id="mappa-evento">
-              <div class="image-container">
-                <img
-                  id="event_map"
-                  src="../assets/cartina_stupinigi_completa.png"
-                  alt="Mappa evento"
-                />
-              </div>
-            </section>
-          </div>
-    </main> 
-    <footer>
-    <li class="dropdown">
-      <div>
-        <a href="#facebook" target="_blank"
-          ><img class="social" src="../assets/icon_facebook.svg"
-        /></a>
-        <a
-          href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
-          target="_blank"
-          ><img class="social" src="../assets/icon_instagram.svg"
-        /></a>
-        <a
-          href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
-          target="_blank"
-          ><img class="social" src="../assets/icon_tiktok.svg" />
-        </a>
+    <div id="general-container" style="display: flex; gap: 20px; margin: 20px">
+      <div id="image-container" style="flex: 1">
+        <img
+          src="../assets/Pennywise_Cosplay_1.jpg"
+          alt="Mappa evento"
+          style="width: 100%; border-radius: 10px"
+        />
       </div>
-    </li>
-  </footer>
+
+      <div id="content-container" style="flex: 2">
+        <section>
+          <h1 class="main-title">
+            <span class="title"
+              >Vieni a trovarci alla splendida Palazzina di Caccia di
+              Stupinigi.</span
+            >
+          </h1>
+          <h1 class="email">Mail: gamescontorino@gmail.com</h1>
+          <p>
+            GamesCon Torino vi aspetta dal
+            <span class="date">30 al 31 ottobre 2027</span> alla Palazzina di
+            Caccia Di Stupinigi!
+          </p>
+        </section>
+      </div>
+    </div>
+
+    <footer>
+      <li class="dropdown">
+        <div>
+          <a href="#facebook" target="_blank">
+            <img class="social" src="../assets/icon_facebook.svg" />
+          </a>
+          <a
+            href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
+            target="_blank"
+          >
+            <img class="social" src="../assets/icon_instagram.svg" />
+          </a>
+          <a
+            href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
+            target="_blank"
+          >
+            <img class="social" src="../assets/icon_tiktok.svg" />
+          </a>
+        </div>
+      </li>
+    </footer>
   </body>
- 
 </html>
