--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -25,15 +25,14 @@
             <a href="#info">Info</a>
             <div class="dropdown-content">
               <a href="comeArrivare.html">Come arrivare</a>
-              <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
           <li class="dropdown">
             <a href="#aree">Aree</a>
             <div class="dropdown-content">
-              <a href="#games">Games</a>
+              <a href="games.html">Games</a>
               <a href="cosplay.html">Cosplay</a>
-              <a href="#conference">Conference</a>
+              <a href="conference.html">Conference</a>
               <a href="areacommerciale.html">Area Commerciale</a>
             </div>
           </li>
@@ -57,11 +56,7 @@
     <main>
       <section id="header-image">
         <div class="header-image-container">
-          <img
-            id="titleImage"
-            src="../assets/gamesConTitle.png"
-            alt="Event Header Image"
-          />
+          <p id="logo">GAMESC🎃N</p>
         </div>
       </section>
 
@@ -82,11 +77,6 @@
           <div class="date-circle">
             <span class="date">31.10</span>
             <div class="tickets-percentage">75%</div>
-            <button class="acquista-btn">ACQUISTA ORA</button>
-          </div>
-          <div class="date-circle">
-            <span class="date">01.11</span>
-            <div class="tickets-percentage">25%</div>
             <button class="acquista-btn">ACQUISTA ORA</button>
           </div>
         </div>
