--- a/sito-web-laboratorio/html_pages/comeArrivare.html
+++ b/sito-web-laboratorio/html_pages/comeArrivare.html
@@ -23,16 +23,15 @@
                     <a href="#info">Info</a>
                     <div class="dropdown-content">
                         <a href="comeArrivare.html">Come arrivare</a>
-                        <a href="#accessibilita">Accessibilità</a>
                     </div>
                 </li>
                 <li class="dropdown">
                     <a href="#aree">Aree</a>
                     <div class="dropdown-content">
-                        <a href="#games">Games</a>
+                        <a href="games.html">Games</a>
                         <a href="cosplay.html">Cosplay</a>
-                        <a href="#conference">Conference</a>
-                        <a href="#area-commerciale">Area Commerciale</a>
+                        <a href="conference.html">Conference</a>
+                        <a href="areacommerciale.html">Area Commerciale</a>
                     </div>
                 </li>
                 <li class="dropdown">
@@ -45,7 +44,7 @@
                 <li class="dropdown">
                     <a href="#social">Contatti</a>
                     <div class="dropdown-content">
-                        <a href="#contatti">Contatti</a>
+                        <a href="contatti.html">Contatti</a>
                     </div>
                 </li>
             </ul>
