--- a/sito-web-laboratorio/html_pages/formazione_dev.html
+++ b/sito-web-laboratorio/html_pages/formazione_dev.html
@@ -30,15 +30,14 @@
             <a href="#info">Info</a>
             <div class="dropdown-content">
               <a href="comeArrivare.html">Come arrivare</a>
-              <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
           <li class="dropdown">
             <a href="#aree">Aree</a>
             <div class="dropdown-content">
-              <a href="#games">Games</a>
+              <a href="games.html">Games</a>
               <a href="cosplay.html">Cosplay</a>
-              <a href="#conference">Conference</a>
+              <a href="conference.html">Conference</a>
               <a href="areacommerciale.html">Area Commerciale</a>
             </div>
           </li>
