--- a/sito-web-laboratorio/welcome.html
+++ b/sito-web-laboratorio/welcome.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spooky Animation</title>
-     <link rel="stylesheet" href="welcome_css.css">
-</head>
-<body>
+    <link rel="stylesheet" href="welcome_css.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="gif-container">
-            <img src="animazioneCopertina.gif" alt="Animated GIF" class="animated-gif">
-        </div>
-        <div class="button-container">
-            <a href="html_pages/home.html" class="animated-button">Enter if you dare!</a>
-        </div>
+      <div class="gif-container">
+        <img
+          src="animazioneCopertina.gif"
+          alt="Animated GIF"
+          class="animated-gif"
+        />
+      </div>
+      <div class="button-container">
+        <a href="html_pages/home.html" class="animated-button"
+          >Enter if you dare!</a
+        >
+      </div>
     </div>
     <script src="welcome_script.js"></script>
-</body>
+  </body>
 </html>
